# imessage-archiver

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: build_app.yml  ci.yml  ios.yml
docs/: BUILDPLAN.md  DESIGN_PROMPTS.md  EMBEDDED_ARCHIVER_PLAN.md  EXPORT_PLAN.md  HELP.md  IOS_PLAN.md  MAC_RELEASE_GUIDE.md  QUICKSTART.md  REVIEW_2026-06-round3.md  REVIEW_2026-06.md  SCHEMA.md  SWIFT_PORT_STATUS.md  TEST_PLAN.md  UPDATE_GUIDE.md
docs/img/: README.md
ios/: Info.plist  InfoMac.plist  iMessageArchiver.entitlements  iMessageArchiverMac-BridgingHeader.h  iMessageArchiverMac.entitlements  project.yml  regenerate.sh
ios/Sources/App/: AppState.swift  iMessageArchiverApp.swift  iMessageArchiverMacApp.swift
ios/Sources/App/DesignSystem/: Monogram.swift  SmartArchiveStyle.swift  Tokens.swift
ios/Sources/Archiver/: ArchiveLock.swift  ArchiveMerger.swift  ArchiveVerifier.swift  ArchiveWriter.swift  AttachmentScanner.swift  AttributedBodyDecoder.swift  AttributedBodyDecoderShim.h  AttributedBodyDecoderShim.m  ContactsResolver.swift  CreateArchiveCoordinator.swift  Epoch.swift  SourceDBReader.swift  SourceDBSnapshotter.swift  TarWriter.swift
ios/Sources/DesignSystem/: Tokens.swift
ios/Sources/Models/: ArchiveError.swift  ArchiveManifest.swift  Attachment.swift  Chat.swift  Message.swift  SearchHit.swift
ios/Sources/Persistence/: ArchiveReader.swift  AttachmentCache.swift  SQLiteURI.swift  TarReader.swift  Thumbnailer.swift  iCloudCoordinator.swift
ios/Sources/Platform/: PlatformImage.swift  PlatformNavigation.swift
ios/Sources/Views/: ArchiveInfoView.swift  AttachmentGridView.swift  ChatListView.swift  ChatRowView.swift  CreateArchiveView.swift  ErrorView.swift  MessageBubbleView.swift  NoArchiveView.swift  ReactionsView.swift  RootView.swift  SearchView.swift  ThreadView.swift
ios/Tests/: ArchiveReaderTests.swift  TarReaderTests.swift
ios/Tests/Fixtures/: generate_fixture.sh
ios/iMessageArchiver.xcodeproj/: project.pbxproj
packaging/: ExportOptions-DeveloperID.plist  build_mac_dmg.sh  build_macos_arm64.sh  imessage_archiver.spec
scripts/: capture-screenshots.sh  imessage-footprint.sh  patch-archive-text.py
src/imessage_archiver/: util.py
src/imessage_archiver/cli/: commands.py
src/imessage_archiver/core/: archive.py  attachments.py  icloud_prefetch.py  lock.py  merge.py  tar_writer.py  verify.py
src/imessage_archiver/db/: attributed_body.py  cloud_status.py  contacts.py  epoch.py  reader.py  schema.py  snapshot.py
src/imessage_archiver/gui/: app.py  archive_panel.py  main_window.py  message_view.py  models.py  setup_screen.py  workers.py
tests/fixtures/: edge.db  generate.py  medium.db  sequoia.db  sonoma.db  tiny.db  ventura.db
tests/integration/: test_archive_integrity.py  test_ci_destructive_sql_gate.py  test_cli_failure_paths.py  test_cli_integration.py  test_corruption_resistance.py  test_fts_round_trip.py  test_hardening.py  test_merge.py
tests/unit/: test_archive.py  test_attachments.py  test_attributed_body.py  test_cloud_status.py  test_contacts.py  test_container_alignment.py  test_epoch.py  test_gui_archive_panel_helpers.py  test_gui_models.py  test_gui_workers.py  test_lock.py  test_reader.py  test_schema.py  test_snapshot.py  test_tar_writer.py  test_verify.py
