[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imessage-archiver"
version = "0.1.0"
description = "macOS desktop app for archiving iMessage conversations and attachments"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Contacts>=10.0",
    "pyobjc-framework-EventKit>=10.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.8"]
build = ["pyinstaller>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
]

[project.scripts]
imessage-archiver = "imessage_archiver.cli.commands:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Test files need to set QT_QPA_PLATFORM=offscreen BEFORE importing PySide6,
# so a few imports legitimately appear after module-level code.
"tests/unit/test_gui_*.py" = ["E402"]
# CLI command file has Rich table.add_row() lines that don't break cleanly.
"src/imessage_archiver/cli/commands.py" = ["E501"]

[tool.black]
line-length = 110
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# PySide6 stubs are imperfect (Qt.Horizontal etc. are reported as missing).
# GUI module is non-critical wrapper code; let it through.
exclude = ["src/imessage_archiver/gui/"]

[[tool.mypy.overrides]]
module = "imessage_archiver.gui.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Apply a 60-second per-test timeout so a hung Qt test (or a deadlocked
# QThread) does not stall CI indefinitely. Individual slow tests can
# override with @pytest.mark.timeout(N).
# timeout_method = "thread": SIGALRM-based timeouts don't fire inside Qt
# event loops (Qt installs its own signal handlers), so use a thread-based
# watchdog that can kill a hung Qt test. This is the standard pytest-qt
# remediation for the 6-hour CI hang we hit on macos-14.
addopts = "-v --cov=imessage_archiver --cov-report=term-missing --timeout=60 --timeout-method=thread"
qt_api = "pyside6"

[tool.coverage.run]
source = ["src/imessage_archiver"]
omit = ["*/gui/*"]
